tests/ui/span/destructor-restrictions.stderr
error[E0597]: `*a` does not live long enough
  --> $DIR/destructor-restrictions.rs:8:10
   |
LL |         let a = Box::new(RefCell::new(4));
   |             - binding `a` declared here
LL |         *a.borrow() + 1
   |          ^---------
   |          |
   |          borrowed value does not live long enough
   |          a temporary with access to the borrow is created here ...
LL |     };
   |     -- ... and the borrow might be used here, when that temporary is dropped and runs the destructor for type `Ref<'_, i32>`
   |     |
   |     `*a` dropped here while still borrowed
   |
   = note: the temporary is part of an expression at the end of a block;
           consider forcing this temporary to be dropped sooner, before the block's local variables are dropped
help: for example, you could save the expression's value in a new local variable `x` and then make `x` be the expression at the end of the block
   |
LL |         let x = *a.borrow() + 1; x
   |         +++++++                +++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0597`.
